--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,11 +9,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 19
-
-      - uses: gradle/gradle-build-action@v2.6.0
-        with:
-          arguments: --configuration-cache test
+      - uses: actions/setup-node@v3
+        run: npm test
