--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
 
-      - run: npm run ci
+      - run: npm ci
 
       - name: docker-build-push
         uses: nais/docker-build-push@v0
