--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -19,6 +19,10 @@ spec:
   replicas:
     min: 1
     max: 1
+  ingresses:
+  {{#each ingresses as |url|}}
+      - {{url }}
+  {{/each}}
   resources:
     limits:
       memory: 512Mi
