--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   "devDependencies": {
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "msw": "^1.2.2",
     "prettier": "^3.0.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
